[gd_scene load_steps=9 format=3 uid="uid://brlccko43pl3v"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_2lfa5"]
[ext_resource type="PackedScene" uid="uid://dfgmq5q5gxm8t" path="res://scenes/mob.tscn" id="2_ng5c3"]
[ext_resource type="Texture2D" uid="uid://b5v3luadjsc48" path="res://Godot Dodging Game Assets/background.jpg" id="3_doyut"]
[ext_resource type="PackedScene" uid="uid://utsghbpucfls" path="res://scenes/player.tscn" id="4_ljher"]
[ext_resource type="PackedScene" uid="uid://dq44jf2cs0i3h" path="res://scenes/hud.tscn" id="5_f0hqo"]
[ext_resource type="AudioStream" uid="uid://dua6xm0mcjqxo" path="res://Godot Dodging Game Assets/Background music.ogg" id="6_nfb8b"]
[ext_resource type="AudioStream" uid="uid://8akaeqyk7v56" path="res://Godot Dodging Game Assets/Game over sound.wav" id="7_4clsu"]

[sub_resource type="Curve2D" id="Curve2D_poxho"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 8, 11, 0, 0, 0, 0, 1143, 12, 0, 0, 0, 0, 1145, 637, 0, 0, 0, 0, 17, 621, 0, 0, 0, 0, 22, 9)
}
point_count = 5

[node name="main" type="Node2D"]
script = ExtResource("1_2lfa5")
mob_scene = ExtResource("2_ng5c3")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.91254, 0.856011)
texture = ExtResource("3_doyut")
centered = false

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_poxho")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2(8, 11)
rotation = 0.000881057

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Player" parent="." instance=ExtResource("4_ljher")]
position = Vector2(583, 385)

[node name="mob" parent="." instance=ExtResource("2_ng5c3")]
position = Vector2(-136, 4)

[node name="ScoreTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource("5_f0hqo")]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_nfb8b")

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_4clsu")

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="dead" from="Player" to="." method="game_over"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
